@@ -1294,76 +1294,6 @@ class cmd_mark_uploaded(Command):
             t.unlock()
 
 
-class cmd_merge_package(Command):
-    """Merges source packaging branch into target packaging branch.
-
-    This will first check whether the upstream branches have diverged.
-
-    If that's the case an attempt will be made to fix the upstream ancestry
-    so that the user only needs to deal with packaging branch merge issues.
-
-    In the opposite case a normal merge will be performed.
-
-    As of bzr 2.5 and bzr-builddeb 2.8.1, this functionality is automatically
-    provided as part of bzr merge.
-    """
-    takes_options = ['revision']
-    takes_args = ['source']
-
-    hidden = True
-
-    def run(self, source, revision=None):
-        from ... import ui
-        from ...merge import Merger
-        from .merge_package import fix_ancestry_as_needed
-        if 'pre_merge' in Merger.hooks:
-            ui.ui_factory.show_warning(
-                "The merge-package command is deprecated. Use 'bzr merge' "
-                "instead.")
-        source_branch = None
-        # Get the target branch.
-        try:
-            tree = WorkingTree.open_containing('.')[0]
-        except (NotBranchError, NoWorkingTree):
-            raise BzrCommandError(
-                gettext("There is no tree to merge the source branch in to"))
-        # Get the source branch.
-        try:
-            source_branch = Branch.open(source)
-        except NotBranchError:
-            raise BzrCommandError(gettext("Invalid source branch URL?"))
-
-        if revision is None:
-            revid = source_branch.last_revision()
-        elif len(revision) == 1:
-            revid = revision[0].in_history(source_branch).rev_id
-        else:
-            raise BzrCommandError(gettext('bzr merge-package --revision takes '
-                'exactly one argument'))
-
-        tree.lock_write()
-        self.add_cleanup(tree.unlock)
-        source_branch.lock_read()
-        self.add_cleanup(source_branch.unlock)
-        this_config = debuild_config(tree, tree)
-        that_config = debuild_config(source_branch.basis_tree(),
-                source_branch.basis_tree())
-        if not (this_config.build_type == BUILD_TYPE_NATIVE or
-                that_config.build_type == BUILD_TYPE_NATIVE):
-            fix_ancestry_as_needed(tree, source_branch, source_revid=revid)
-
-        # Merge source packaging branch in to the target packaging branch.
-        source_branch.tags.merge_to(tree.branch.tags)
-        conflicts = tree.merge_from_branch(source_branch, to_revision=revid)
-        if conflicts > 0:
-            note(gettext(
-                'The merge resulted in %s conflicts. Please resolve these '
-                'and commit the changes with "bzr commit".') % conflicts)
-        else:
-            note(gettext('The merge resulted in no conflicts. You may '
-                'commit the changes by running "bzr commit".'))
-
-
 class cmd_dh_make(Command):
     """Helps you create a new package.
 
